sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: illegal start of simple expression
  while ()
         ^AlgCocktailSort2:22: error: ')' expected but '}' found.
} 
^