sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var a=true
  while ()
  a=false
  var d=0
  var f=getNombreValeurs-2
  for (j <- d to f){
    if (!isSmaller(j,j+1)){
      swap(j,j+1)
      a=true
    }
    f=f-1
}
for (j <- f to d by -1){
    if (!isSmaller(j,j+1)){
      swap(j,j+1)
      a=true
		}
  d=d+1
}   
}